--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,13 @@
 *.app
 
 .DS_Store
+*.swp
+*~.nib
+
+build/
+
+*.pbxuser
+*.perspective
+*.perspectivev3
+
+ProjectFolder.xcodeproj/project.xcworkspace/xcuserdata/
